Fixed Sonar issues - Fixed `logging.properties` path